--- a/Richtek2/css/style.css
+++ b/Richtek2/css/style.css
@@ -17,7 +17,7 @@ abbr, acronym { border:0;}
 
 body, h1, h2, h3, h4, h5, h6, p {font-family:'Noto Sans TC',Arial,\5FAE\8EDF\6B63\9ED1\9AD4,\65B0\7D30\660E\9AD4, sans-serif; font-weight: normal; color: #4A4A4A;}
 p{ font-size:14px;}
-a{  text-decoration:none; outline: none; cursor: pointer; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;}
+a{  text-decoration:none; outline: none; cursor: pointer; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; transition: #666\9;  /*for ie6、7、8*/ ; transition: initial  /*for ie8*/ ; +transition: initial /*for ie7*/;_transition:initial/*for ie6*/ ;}
 a:hover{ text-decoration:none;}
 select, input, textarea, button {  font-family:'Noto Sans TC',Arial,\5FAE\8EDF\6B63\9ED1\9AD4,\65B0\7D30\660E\9AD4, sans-serif; font-size: 14px;color: #4A4A4A;}
 *:link, *:visited, *:hover, *:active, *:focus , * {border: none;outline: none; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
@@ -212,6 +212,7 @@ main{ min-width: 320px; }
 }
 @media (max-width:500px){
 	.mainBox .rightContents .main_banner{ min-height: 120px; height: initial;}
-	.mainBox .rightContents .main_banner h1.main_title{ font-size: 32px; }
+	.mainBox .rightContents .main_banner h1.main_title{ font-size: 28px; }
 	.mainBox .rightContents .main_banner h2.sub_title{ font-size: 15px;}
+	.mainBox .insideContents .banner_info{ text-align: center; }
 }
