--- a/jetfi_wifi_jp/css/wifi-style.css
+++ b/jetfi_wifi_jp/css/wifi-style.css
@@ -26,6 +26,12 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 *{ -ms-touch-action: manipulation; touch-action: manipulation; }
 
 /*===== start ======*/
+.header_container{ z-index:100; width: 100%; background-color: #fff; padding:16px 26px;border-bottom: 1px solid #d6d6d6;}
+.header_container p.tagline{ float: left; font-size: 13px; margin-left:24px; font-weight: 500; padding-top: 3px; }
+.header_container a.gnav-logo{ float: left; display: inline-block; }
+.header_container a.gnav-logo img{ width: 110px;}
+
+
 .img_default, .img_default::before, .img_default::after{ background-position: center center; background-repeat: no-repeat; background-size: contain;}
 
 .main_container{ width: 100%; margin: 0 auto;}
@@ -81,8 +87,9 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 .main_container .area_content ul.area_list li .area_photo .labels p.hot{ background-color: #C90410; padding: 2px 12px; color: #fff; font-weight: 500;}
 
 .main_container .area_content ul.area_list li .area_info{ width: 100%; min-height: 128px; padding: 10px 0;}
-.main_container .area_content ul.area_list li h3.area_title{ text-align: center; font-weight: bold; font-size: 20px; color: #000; margin-bottom: 15px;}
-.main_container .area_content ul.area_list li h3.area_title span{ font-weight: 500; border-bottom: 1.8px solid #6091CD; padding: 6px 20px; line-height: 25px;}
+.main_container .area_content ul.area_list li h3.area_title{ text-align: center; font-weight: bold; position: relative; font-size: 20px; color: #000; margin-bottom: 15px;}
+.main_container .area_content ul.area_list li h3.area_title::after{ content: ""; bottom: -10px; left: 25%; display: block; width: 50%; position: absolute; border-bottom: 1.8px solid #6091CD;}
+.main_container .area_content ul.area_list li h3.area_title span{ font-weight: 500; padding: 6px 20px; line-height: 25px;}
 .main_container .area_content ul.area_list li h3.area_title span.f_s{ font-size: 17px; border: none; padding: 0; font-weight: 400; }
 .main_container .area_content ul.area_list li h4.area_sub_title{ font-size: 15px; line-height: 25px; color: #000; padding: 7px 15px; display: inline-block; }
 .main_container .area_content ul.area_list li a:hover{ opacity: .9; }
@@ -169,12 +176,50 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 .inside_container .area_content ul.area_list li h3.area_title{ margin-bottom: 10px;}
 .inside_container .area_content ul.area_list li h4.area_sub_title{ text-align: center; color: #FF0000; width: 100%; }
 
+/*footer*/
+html { font-size: 62.5%; }
+body { font-size: 1.6rem;}
+
+footer{ background-color: #ededed;}
+footer .contact_info_inner { padding: 20px 40px 40px;}
+footer div.inner{width: 100%; max-width: 1150px; margin: 0 auto;padding: 2em 2em 6em;;text-align: left;background: url(../images/svg/bg_footer.jpg) 80% bottom no-repeat;background-size: contain}
+footer .copyright-area{ position: relative; padding: 5px 20px 12px; color: #fff; background-color: #221815; text-align: center; font-weight: 400;}
+footer .copyright-area span { font-size: 11px; font-size: 1.1rem; color: #fff; display:block; }
+footer .copyright-area a { display:block; font-size: 13px; font-size: 1.3rem; line-height:2.1; color: #efefef; }
+footer .copyright-area a:hover { opacity:0.7; transition: 0.4s ease;}
+footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color: #221815}
+
+#ftr_2019{ position: relative;}
+#ftr_2019 h3{ color: #1b3b7c; font-family: 'Noto Sans JP', sans-serif; font-weight: 700; font-feature-settings: "pwid";	font-size: 2rem; display: inline-block; vertical-align:top; padding: 5px 40px 5px 0;}
+#ftr_2019 a.btn_mail { font-size: 18px; display: inline-block; width: 40%;	margin-top: 1em; margin-right: 2.35765%; padding: 1em 2em; text-align: center;	color: #000; background: #fde060;background: -moz-linear-gradient(top, #fde060 12%, #f6c84d 99%); background: #f7d93e; border-radius:6px;}
+#ftr_2019 a.btn_mail span {	font-family: 'Noto Sans JP', sans-serif;font-weight: 700; font-feature-settings: "pwid";	display: inline-block; width: 40%; margin-top: 1em;	margin-right: 2.35765%;	padding: 1em 2em; text-align: center; color: #000; background: #fde060;	background: -moz-linear-gradient(top, #fde060 12%, #f6c84d 99%); background: #f7d93e; border-radius:6px; }
+#ftr_2019 .contact_info_title{ background-color:#0a3c80;color:#fff;padding:0.4em;font-size: 2.8rem;margin:0;font-family: 'Noto Sans JP', sans-serif;font-weight: 700; font-feature-settings: "pwid"; text-align: center;}
+#ftr_2019 .contact_info_inner{padding:35px 40px; background-color: #fff;}
+
+#ftr_2019 .title{ pointer-events: none;}
+#ftr_2019 .right{ display: inline-block; padding: 5px  0 5px 40px; border-left: 1px solid #1b3b7c;}
+#ftr_2019 .tel{	font-size:3.6rem; color:#282828; position: relative; text-align: left; display: inline-block; margin-right: 40px; font-weight: 400; }
+#ftr_2019 .tel:before{  content: ''; display: inline-block; width: 54px; height: 43px; background-image: url(../images/svg/logo_navi.svg); background-size: contain; vertical-align: middle;}
+#ftr_2019 .tokou{ color: #282828; font-family: 'Noto Sans JP', sans-serif;	font-weight: 500; font-feature-settings: "pwid"; font-size: 1.4rem; text-align: left; margin: 12px 0 0;}
+#ftr_2019 .tokou span{ color: #c1272d;}
+#ftr_2019 .tokou-tel{ font-size:2.8rem;	color:#282828; display:inline-block; position: relative; text-align: left; margin-right:70px; font-weight: 400;}
+#ftr_2019 .tokou-tel:before{ content: ''; display: inline-block; width: 32px; height: 32px; background-image: url(../images/svg/phone_icon.svg); background-size: contain; vertical-align: middle; margin-right: 10px;}
+#ftr_2019 .mail{ font-size:3rem;color:#477dca; position: relative; text-align: left; position: relative; top:-5px; font-weight: 400;}
+#ftr_2019 .mail:before{ content: ''; display: inline-block; width: 44px; height: 44px; background-image: url(../images/svg/mail_icon.svg); background-size: contain; vertical-align: middle;  margin-right: 10px;}
+#ftr_2019 .cap{ font-size: 1.2rem; color:#282828; text-align:left; display:inline-block; font-weight: 400;}
+
+.sp{ display: none !important;}
+
 
 @media (max-width:1200px){
 	.main_container .area_content .area_menu ul.choose_country li{ min-width: 30%; }
 	.main_container .area_content ul.area_list li{ width: calc(100% / 3); }
 	.main_container .area_content ul.area_list li h3.area_title{font-size: 18px;}
 	.main_container .area_content ul.area_list li h3.area_title span.f_s{ font-size: 14px; }
+	.main_container .area_content ul.area_list li.field_2{ width:66.66%; }
+}
+@media (max-width: 1024px) {
+	#container .content-inner,	footer div.inner {width: 90%;}
 }
 @media (max-width:1000px){
 	.main_container .area_content ul.area_list li{ width:50%;}
@@ -226,13 +271,26 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 	.inside_container .top_banner .middle_content::before, .inside_container .top_banner .middle_content::after{ display: none;}
 	.main_container ul.capacity_content li a{ padding: 30px 10px 0px 10px;}
 }
-@media screen and (max-width: 768px){
+@media (min-width:769px) {
+	footer div.inner {margin: 0 auto; padding: 4em 0; padding-bottom:120px;text-align: left; background: url(../images/bg_footer.jpg) right bottom no-repeat; background-size: 663px 173px;}
+}
+@media (max-width:768px) {
+	.header_container{ position: fixed; top: 0; left: 0; padding: 4.5px 20px; -webkit-box-shadow: 0px -3px 10px 0 #333;text-align: center;}
+	.header_container a.gnav-logo{ float: none; }
+	.header_container a.gnav-logo img{ width: 90px;}
+	.header_container p.tagline{ display: none; }
 	.main_container{ padding-top: 50px;}
 	.main_container .travel_plan_content .plan_info .show_more_info{ border: 1.8px solid #60A4E0;}
 	.main_container .travel_plan_content .plan_info .show_more_info .mob_show{ padding: 10px; }
 	.main_container .travel_plan_content .plan_info .show_more_info h4{ font-weight: 400; background-color: #60A4E0; color: #fff; padding-left: 15px; padding: 5px 10px;}
 	.main_container .travel_plan_content .plan_info .show_more_info h4::before{ display: none; }
 	.main_container .travel_plan_content .plan_info .show_more_info h4::after{ content: ""; top:calc(50% - 8.25px); right: 8px; position: absolute; width: 16.5px; height: 16.5px; display: block; background: url(../images/svg/arr_blue.svg) center center no-repeat; background-size: contain;}
+	
+	footer .copyright-area{position: relative;padding: 10px 20px 10px;color: #fff;background-color: #221815;}
+	footer .copyright-area span{font-size: 12px;font-size: 1.2rem;color: #fff;display: inline-block!important;padding-top: 0px;}
+	footer .copyright-area a{font-size: 13px;font-size: 1.3rem;color: #fff;line-height: 1.5;}
+	footer div.inner { width: 100%; margin: 0 auto; padding-bottom: 32%; text-align: left; background: url(../images/bg_footer.jpg) 80% bottom no-repeat; background-size: contain;}
+	footer p.copyright { padding: 1em; text-align: center; color: #fff; background-color: #221815;	}
 }
 @media (max-width:650px){
 	.main_container h3.top_title{ text-align: center; }
@@ -249,6 +307,7 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 	.main_container .area_content ul.area_list li h3.area_title{ margin-bottom: 0; }
 	.main_container .area_content ul.area_list li h3.area_title span{display: inline-block;}
 	.main_container .area_content ul.area_list li h3.area_title span.f_s{ display: block; }
+	.main_container .area_content ul.area_list li h3.area_title::after{ bottom: 0; }
 
 	.main_container .travel_plan_content .plan_info{ padding: 20px 22px; }
 	.main_container .travel_plan_content .area_photo{ height:170px; }
@@ -276,7 +335,19 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 	.main_container .tab_capacity .tab_inner ul li{ width: calc(97% / 3); vertical-align: top; padding: 20px 0 0 0;}
 	.main_container .tab_capacity .tab_inner p.app_title, .main_container .tab_capacity .tab_inner p.return{ font-size: 12px; }
 }	
+@media (max-width: 640px){
+	.sp {display: block !important;}
+	.pc{ display: none !important; }
+	#ftr_2019 .right {display: inline-block; padding: 15px 0px 25px 0px; border-left: none; }
+    #ftr_2019 .mail { font-family: 'Roboto Condensed', sans-serif; font-size: 2.2rem; color: #477dca; position: relative; text-align: left; position: relative; top: 10px;}
+	#ftr_2019 .contact_info_inner{ padding: 15px; }
+	#ftr_2019 .tokou-tel, #ftr_2019 .tel, #ftr_2019 .contact_info_title{ font-size: 2.3rem; margin-right: 0;}
+	#ftr_2019 .mail:before{ width: 30px; height: 30px;}
 
+	footer .copyright-area{position:relative;padding: 10px 20px;color: #fff; background-color: #221815;text-align:center;}
+	footer .copyright-area span{font-size: 11px;font-size: 1.1rem; color: #fff;}
+	footer .copyright-area a{ font-size: 1.3rem; color: #fff;}
+}
 @media (max-width:599px){
 	.main_container h3.top_title{ font-size: 17px; }
 	.main_container .area_content ul.area_list li a{ min-height: 175px;}
